adding latest clients

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                         <a alt="contact us" href="http://accelerator.hacktrain.com/contact/">Contact Us</a>
                     </li>
                     <li>
-                        <a alt="apply now" class="btn btn-default" href="https://www.f6s.com/railtechaccelerator2016/apply" role="button" class="btn btn-info">
-                          Accelerator Apply
+                        <a alt="apply now" class="btn btn-default" href="https://accelerator.hacktrain.com" role="button" class="btn btn-info">
+                          Learn more
                         </a>
                      </li>
                      <!-- 
@@ -207,6 +207,29 @@
         </div>
     </header>
 
+
+    <p>
+        <h2 style="text-align: center; width: 100%">
+        The HackTrain provides a <i style="color:#219ab3;font-size:1.5em;">platform </i>
+        <br>
+        for technologists to <i style="color:#219ab3;font-size:1.5em;">revolutionise</i> the industry.</h2>
+    </p>
+    
+    <br>
+    <br>
+
+    <div style="margin:0 auto; width: 60%;">
+      <div class="videoWrapper">
+        <iframe width="840" height="472" src="https://www.youtube.com/embed/2rMCszN8PTU" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
     <div class="row">
         <div class="col-lg-4 col-lg-offset-2">
             <h2>
@@ -229,62 +252,18 @@
         </div>
     </div>
 
-    <br>
-    <br>
-    <br>
-
-  
-
-    <br>
-    <br>
-    <p>
-        <h2 style="text-align: center; width: 100%">
-        The HackTrain provides a <i style="color:#219ab3;font-size:1.5em;">platform </i>
-        <br>
-        for technologists to <i style="color:#219ab3;font-size:1.5em;">revolutionise</i> the industry.</h2>
-    </p>
-    
-    <br>
-    <br>
-
-    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2" style="margin-bottom: 200px; clear: both;">
-        <div id="fb-root"></div><script>(function(d, s, id) {  var js, fjs = d.getElementsByTagName(s)[0];  if (d.getElementById(id)) return;  js = d.createElement(s); js.id = id;  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";  fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script><div class="fb-video" data-allowfullscreen="1" data-href="/thehacktrain/videos/vb.621526587993573/674179579394940/?type=1"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/thehacktrain/videos/674179579394940/"><a href="https://www.facebook.com/thehacktrain/videos/674179579394940/">HackTrain: Highlights!</a><p>Check out the highlights from HackTrain - Europe&#039;s first hackathon on a train! Thanks to all the awesome teams, sponsors and everyone who made this weekend special!</p>Posted by <a href="https://www.facebook.com/thehacktrain">HackTrain</a> on Friday, April 17, 2015</blockquote></div></div>
-    </div>
 
 
-<br><br><br>
-<br><br><br>
-<br><br><br>
+<br><br><br><br><br>
 
 
     <div style="
     width:  100%;
     text-align: center;
     clear: both">      
-        <a id="apply" class="btn btn-default" style="font-size: 50px; text-align: center; margin: auto auto" href="https://hackpartners.typeform.com/to/pvSvMG">Apply for Accelerator</a>
+        <a id="apply" class="btn btn-default" style="font-size: 50px; text-align: center; margin: auto auto" href="https://accelerator.hacktrain.com">Learn more about Accelerator</a>
     </div>
-    <br><br>
-    <div class="row">
-        <div class="col-lg-4 col-lg-offset-2">
-            <h2>
-                <font style="color:#219ab3;">   
-                    <i style="font-size:2em;">Trainhacker:</i>
-                    <div style="font-size:1em; text-align: left; padding-left: 70px; padding-top: 10px">
-                        /treɪnˈhakə/
-                        <br>
-                        noun.
-                    </div>
-                </font> 
-            </h2>
-        </div>
-        <div class="col-md-4" style="font-size: 1.3em; text-align: left; padding-top: 10px;">
-                A young technologist or innovator who has the skills, knowledge and drive to have an impact in the industry by creating unique, innovative solutions.
-            <br><br>
-            <b>
-                Trainhackers are not afraid to look the industry in the eyes, and defy it by building cheaper, better and faster services.
-            </b>
-        </div>
-    </div>
+
 
     <section id="sponsors" class="content-section text-center">
         <div style="width: 90%; margin: auto auto;" class="row">
@@ -360,21 +339,30 @@
                 <div style="clear: both; margin-bottom: 100px"></div>
 
                 <div class="col-xs-4 img-container">
-                  <a alt="Great Western Rail" href="https://www.gwr.com/">
-                    <img alt="Great Western Rail" style="width: 80%;margin: auto auto" class="img-responsive" src="img/transport-sponsors/gwr-white.png"/>
+                  <a href="http://www.arriva.co.uk/">
+                    <img alt="Arriva Group" style="width: 100%;margin: auto auto" class="img-responsive" src="img/sponsors/arriva.png"/>
                   </a>
                 </div>
-                <div alt="virgin trains east coast" class="col-xs-4 img-container">
-                    <a alt="virgin trains east coast" style="width: 100%;" href="https://www.virgintrainseastcoast.com/">
-                        <img style="width: 70%; margin: auto auto;" src="img/transport-sponsors/vtec.png"/>
-                    </a>
+                <div class="col-xs-4 img-container">
+                  <a href="http://www.c2c-online.co.uk/">
+                    <img alt="National Express" style="width: 100%;margin: auto auto" class="img-responsive" src="img/sponsors/nx.png"/>
+                  </a>
                 </div>
-                <div alt="south West Trains" class="col-xs-4 img-container">
-                    <a alt="south West Trains" style="width: 100%;" href="http://www.southwesttrains.co.uk/">
-                        <img style="width: 90%;" src="img/transport-sponsors/sw.png"/>
-                    </a>
+                <div class="col-xs-4 img-container">
+                  <a href="http://www.go-ahead.com/en/index.html">
+                    <img alt="GoAhead" style="width: 100%;margin: auto auto" class="img-responsive" src="img/sponsors/go-ahead.png"/>
+                  </a>
                 </div>
-
+                <div class="col-xs-4 img-container">
+                  <a href="http://www.firstgroupplc.com/">
+                    <img alt="First group" style="width: 80%;margin: auto auto" class="img-responsive" src="img/sponsors/fg.png"/>
+                  </a>
+                </div>
+                <div class="col-xs-4 img-container">
+                  <a href="http://www.stagecoach.com/">
+                    <img alt="Stagecoach group" style="width: 100%;margin: auto auto" class="img-responsive" src="img/sponsors/stagecoach.png"/>
+                  </a>
+                </div>
                 <div alt="SilverRail Technologies" class="col-xs-4 img-container">
                     <a alt="SilverRail Technologies" target="_blank" style="width: 100%;" href="http://silverrailtech.com/">
                         <img style="width: 100%;" src="img/sponsors/logo-silverrail.png"/>
@@ -410,26 +398,9 @@
                         <img style="width: 100%;" src="img/sponsors/logo-chiltern-railways.png"/>
                     </a>
                 </div>
-
                 <div alt="Bloomberg" class="col-xs-4 img-container">
                     <a alt="Bloomberg" target="_blank" style="width: 100%;" href="http://www.bloomberglabs.com/">
                         <img style="width: 100%;" src="img/index/logo-bloomberg.png"/>
-                    </a>
-                </div>
-                <div alt="Cogitare" class="col-xs-4 img-container">
-                    <a alt="Cogitare" target="_blank" style="width: 100%;" href="http://www.cogitare.biz/">
-                        <img style="width: 100%;" src="img/index/logo-cogitare.png"/>
-                    </a>
-                </div>
-
-                <div alt="Tech North" class="col-xs-4 img-container">
-                    <a alt="Tech North" target="_blank" style="width: 100%;" href="http://technorthhq.com/">
-                        <img style="width: 100%;" src="img/index/tech-north.jpg"/>
-                    </a>
-                </div>
-                <div alt="national railway museum" class="col-xs-2 img-container">
-                    <a alt="national railway museum" target="_blank" style="width: 100%;" href="http://www.nationalrail.co.uk/">
-                        <img style="width: 100%;" src="img/index/nationalrailmuseum.png"/>
                     </a>
                 </div>
             </div>
