--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
             <ul class="list-inline banner-social-buttons col-sm-12">
                 <li class="col-sm-6">
-                    <a alt="twitter" href="/hackathon-2.html" class="btn btn-default btn-lg"> <span style="font-size:23px" class="network-name">Hacktrain Hackathon</span></a>
+                    <a alt="twitter" href="http://conference.hacktrain.com" class="btn btn-default btn-lg"> <span style="font-size:23px" class="network-name">Hacktrain Conference</span></a>
                 </li>
 
                 <li class="col-sm-6">
