--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="A hackathon on a train, a railway accelerator, and an innitiative to innovate the railway industry.">
+    <meta name="description" content="An initiative to revolutionise the transport industry through RailTech and the HackTrain.">
     <meta name="author" content="Hack Partners">
     <link rel="shortcut icon" href="img/index/hacktrain-icon-black.png">
 
@@ -14,7 +14,7 @@
     <meta property="og:title" content="HackTrain - Join us!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://hacktrain.com" />
-    <meta property="og:description" content="Click here to apply to the world's craziest, most awesome hackathon." />
+    <meta property="og:description" content="An initiative to revolutionise the transport industry through RailTech and the HackTrain." />
     <meta property="og:image" content="http://hacktrain.com/img/index/fbanner.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1500" />
