--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <a alt="contact us" href="http://accelerator.hacktrain.com/contact/">Contact Us</a>
                     </li>
                     <li>
-                        <a alt="apply now" class="btn btn-default" href="https://accelerator.hacktrain.com" role="button" class="btn btn-info">
+                        <a alt="apply now" class="btn btn-default" href="http://accelerator.hacktrain.com" role="button" class="btn btn-info">
                           Learn more
                         </a>
                      </li>
@@ -261,7 +261,7 @@
     width:  100%;
     text-align: center;
     clear: both">      
-        <a id="apply" class="btn btn-default" style="font-size: 50px; text-align: center; margin: auto auto" href="https://accelerator.hacktrain.com">Learn more about Accelerator</a>
+        <a id="apply" class="btn btn-default" style="font-size: 50px; text-align: center; margin: auto auto" href="http://accelerator.hacktrain.com">Learn more about Accelerator</a>
     </div>
 
 
