added focus on conference

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <a class="page-scroll" href="http://accelerator.hacktrain.com">Accelerator</a>
                     </li>
                     <li>
-                        <a alt="HackTrain News" href="http://news.hacktrain.com">News</a>
+                        <a alt="HackTrain Conference" href="http://Conference.hacktrain.com">Conference</a>
                     </li>
                     <li>
                         <a alt="contact us" href="http://accelerator.hacktrain.com/contact/">Contact Us</a>
@@ -261,7 +261,7 @@
     width:  100%;
     text-align: center;
     clear: both">      
-        <a id="apply" class="btn btn-default" style="font-size: 50px; text-align: center; margin: auto auto" href="http://accelerator.hacktrain.com">Learn more about Accelerator</a>
+        <a id="apply" class="btn btn-default" style="font-size: 50px; text-align: center; margin: auto auto" href="http://conference.hacktrain.com">Join the HackTrain Conference</a>
     </div>
 
 
