--- a/hackathon-2.html
+++ b/hackathon-2.html
@@ -112,7 +112,7 @@
                         <a alt="HackTrain News" href="http://news.hacktrain.com">News</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/hackahon-1">1.0 Journey</a>
+                        <a class="page-scroll" href="/hackathon-1.html">1.0 Journey</a>
                     </li>
                     <li>
                         <a alt="contact us" href="http://accelerator.hacktrain.com/contact/">Contact Us</a>
