added new website

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </h2>
         </div>
         <div class="col-md-4" style="font-size: 1.3em; text-align: left; padding-top: 10px;">
-                The HackTrain is a platform that introduces technology innovation to the railway industry through a 3-step innovation cycle. We are a group of visionary innovators with the mission to make the UK the leading hub for <a href="http://news.hacktrain.com/what-is-railtech/" class="link-underline">#RailTech innovation</a>. 
+                The HackTrain is a platform that introduces technology innovation to the railway industry through a proven <a href="#innovation-process" class="link-underline">3-step innovation cycle</a>. We are a group of visionary innovators with the mission to make the UK the leading hub for <a href="http://news.hacktrain.com/what-is-railtech/" class="link-underline">#RailTech innovation</a>. 
             <br><br>
             <b>
                 <b>We have relased the B.A.R.R.I.E.R.S. report</b> <a href="http://report.hacktrain.com" class="link-underline">Check it out >></a>
@@ -272,7 +272,7 @@
     <div style="clear: both; width: 100%; height: 100px"></div>
 
 
-    <div class="process-container">
+    <div class="process-container" id="innovation-process">
         
         <div class="process-item col-lg-4">
             
@@ -316,7 +316,7 @@
                 Digital Transformation
             </div>
             <div class="process-description">
-                Accelerator trials open the doors to larger opportunities. However, larger projects might require more than one solution, and sometimes support from an external delivery partner might be required. This is where the HackTrain is able to carry out digital transformation projects.
+                We take successful accelerator trials to the next step through digital transformation projects. By pipelining multiple technologies, and partnering with system integrators, the HackTrain delivers industry-wide and network-wide projects.
             </div>
         </div>
 
