--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="An initiative to revolutionise the transport industry through RailTech and the HackTrain.">
+    <meta name="description" content="An initiative to drive innovation forward in the railway industry through the HackTrain cycle.">
     <meta name="author" content="Hack Partners">
     <link rel="shortcut icon" href="img/index/hacktrain-icon-black.png">
 
@@ -14,8 +14,8 @@
     <meta property="og:title" content="HackTrain - Join us!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://hacktrain.com" />
-    <meta property="og:description" content="An initiative to revolutionise the transport industry through RailTech and the HackTrain." />
-    <meta property="og:image" content="http://hacktrain.com/img/index/fbanner.jpg" />
+    <meta property="og:description" content="An initiative to drive innovation forward in the railway industry through the HackTrain cycle." />
+    <meta property="og:image" content="http://hacktrain.com/img/index/ht.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1500" />
     <meta property="og:image:height" content="1500" />
@@ -24,8 +24,8 @@
     <meta name="twitter:site" content="@TheHackTrain">
     <meta name="twitter:creator" content="@HackPartners">
     <meta name="twitter:title" content="HackTrain - A hackathon on a train.">
-    <meta name="twitter:description" content="Apply now at apply.hacktrain.com.">
-    <meta name="twitter:image" content="http://hacktrain.com/img/index/fbanner.jpg" />
+    <meta name="twitter:description" content="An initiative to drive innovation forward in the railway industry through the HackTrain cycle.">
+    <meta name="twitter:image" content="http://hacktrain.com/img/index/ht.jpg" />
 
     <title>HackTrain - Hack the Rails</title>
 
