--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://hacktrain.com" />
     <meta property="og:description" content="An initiative to drive innovation forward in the railway industry through the HackTrain cycle." />
-    <meta property="og:image" content="http://hacktrain.com/img/index/ht.jpg" />
+    <meta property="og:image" content="http://hacktrain.com/img/index/ht-light.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1500" />
     <meta property="og:image:height" content="1500" />
@@ -25,7 +25,7 @@
     <meta name="twitter:creator" content="@HackPartners">
     <meta name="twitter:title" content="HackTrain - A hackathon on a train.">
     <meta name="twitter:description" content="An initiative to drive innovation forward in the railway industry through the HackTrain cycle.">
-    <meta name="twitter:image" content="http://hacktrain.com/img/index/ht.jpg" />
+    <meta name="twitter:image" content="http://hacktrain.com/img/index/ht-light.jpg" />
 
     <title>HackTrain - Hack the Rails</title>
 
