--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="HackTrain - Join us!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://hacktrain.com" />
-    <meta property="og:description" content="An initiative to drive innovation forward in the railway industry through the HackTrain cycle." />
+    <meta property="og:description" content="The HackTrain is a platform that drives forward innovation in the railway industry through #RailTech." />
     <meta property="og:image" content="http://hacktrain.com/img/index/ht-light.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1500" />
@@ -23,8 +23,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@TheHackTrain">
     <meta name="twitter:creator" content="@HackPartners">
-    <meta name="twitter:title" content="HackTrain - A hackathon on a train.">
-    <meta name="twitter:description" content="An initiative to drive innovation forward in the railway industry through the HackTrain cycle.">
+    <meta name="twitter:title" content="HackTrain - Join us!">
+    <meta name="twitter:description" content="The HackTrain is a platform that drives forward innovation in the railway industry through #RailTech.">
     <meta name="twitter:image" content="http://hacktrain.com/img/index/ht-light.jpg" />
 
     <title>HackTrain - Hack the Rails</title>
