added button to sponsor

--- a/hackathon-3.html
+++ b/hackathon-3.html
@@ -99,7 +99,7 @@
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a class="page-scroll" href="hackathon-2.html">Hackathon</a>
+                        <a class="page-scroll" href="hackathon-2.html">Hackathon 2015</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="http://accelerator.hacktrain.com">Accelerator</a>
@@ -331,12 +331,22 @@
                             </a>
                         </div>
 
+                        <div style="clear: both; width: 100%; height: 100px;"></div>
+
+                        <div style="
+                        width:  100%;
+                        text-align: center;
+                        clear: both">      
+                            <a id="apply" class="btn btn-default" style="font-size: 50px; text-align: center; margin: auto auto" href="#">Become a sponsor</a>
+                        </div>
+
                 </div>
                     </div>
         </div>
+        <div style="clear: both; width: 100%;"></div>
     </section>
 
-    <div style="clear: both; width: 100%; height: 200px"></div>
+    <div style="clear: both; width: 100%; height: 300px"></div>
 
     <div class="container col-lg-8 col-lg-offset-2" style="text-align: center;">
         <h1>HackTrain Cycle</h1>
