added apply button

--- a/hackathon-3.html
+++ b/hackathon-3.html
@@ -111,8 +111,8 @@
                         <a alt="contact us" href="http://report.hacktrain.com">Report</a>
                     </li>
                     <li>
-                        <a alt="apply now" class="btn btn-default" href="http://accelerator.hacktrain.com/contact/" role="button" class="btn btn-info">
-                            Contact us
+                        <a alt="apply now" class="btn btn-default" href="https://hackpartners.typeform.com/to/LLyDnp" role="button" class="btn btn-info">
+                            Apply now
                         </a>
                      </li>
                 </ul>
@@ -276,7 +276,7 @@
     width:  100%;
     text-align: center;
     clear: both">      
-        <a id="apply" class="btn btn-default" style="font-size: 50px; text-align: center; margin: auto auto" href="#">Applications open soon</a>
+        <a id="apply" class="btn btn-default" style="font-size: 50px; text-align: center; margin: auto auto" href="https://hackpartners.typeform.com/to/LLyDnp">Apply now</a>
     </div>
 
 
