--- a/hackathon-3.html
+++ b/hackathon-3.html
@@ -99,16 +99,19 @@
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a class="page-scroll" href="hackathon-2.html">Hackathon 2015</a>
+                        <a href="#sponsors">Sponsors</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://accelerator.hacktrain.com">Accelerator</a>
+                        <a href="#journeys">Journey</a>
                     </li>
-                    <!-- <li>
-                        <a alt="HackTrain Report" href="http://conference.hacktrain.com">Conference</a>
-                    </li> -->
                     <li>
-                        <a alt="contact us" href="http://report.hacktrain.com">Report</a>
+                        <a href="#themes">Themes</a>
+                    </li>
+                    <li>
+                        <a href="#prizes">Prizes</a>
+                    </li>
+                    <li>
+                        <a alt="contact us" href="mailto:hello@hackpartners.com">Contact us</a>
                     </li>
                     <li>
                         <a alt="apply now" class="btn btn-default" href="https://hackpartners.typeform.com/to/LLyDnp" role="button" class="btn btn-info">
@@ -271,7 +274,7 @@
     </div>
 
     
-    <section id="sponsor" class="content-section text-center">
+    <section id="sponsors" class="content-section text-center">
         <div style="width: 90%; margin: auto auto;" class="row">
             <div class="container col-lg-8 col-lg-offset-2">
                 <h1>Sponsors</h1>
@@ -346,7 +349,7 @@
 
 
 
-    <section id="sponsors" class="content-section text-center">
+    <section name="partners" id="partners" class="content-section text-center">
         <div style="width: 90%; margin: auto auto;" class="row">
             <div class="container col-md-8 col-md-offset-2">
                 <h1>Partners</h1>
@@ -406,7 +409,7 @@
     </section>
 
 
-    <section id="journeys" class="content-section text-center">
+    <section name="journeys" id="journeys" class="content-section text-center">
         <div style="width: 90%; margin: auto auto;" class="row">
             <div class="container col-md-8 col-md-offset-2">
                 <h1>Journeys</h1>
@@ -436,7 +439,7 @@
     </section>
 
 
-    <section id="themes" class="content-section text-center">
+    <section name="themes" id="themes" class="content-section text-center">
         <div style="width: 90%; margin: auto auto;" class="row">
             <div class="container col-md-8 col-md-offset-2">
                 <h1>Themes</h1>
@@ -534,7 +537,7 @@
     </section>
 
 
-    <section id="themes" class="content-section text-center">
+    <section class="content-section text-center">
         <div style="width: 90%; margin: auto auto;" class="row">
             <div class="container col-md-8 col-md-offset-2">
                 <h1>Applications</h1>
@@ -640,7 +643,7 @@
                 </div>
             </div>
         </a>
-        <a style="color: white" href="https://www.youtube.com/watch?v=lFTGZnouRzo">
+        <a style="color: white"href="https://www.youtube.com/watch?v=lFTGZnouRzo">
             <div class="process-item col-lg-4">
                 
                 <div class="process-background" style="background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url(img/index/dt2.jpg);"></div>
