--- a/hackathon-3.html
+++ b/hackathon-3.html
@@ -89,7 +89,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="/">
+                <a class="navbar-brand page-scroll hidden-sm" href="/">
                     <span><img alt="hacktrain" src="img/index/hacktrain-just-logo.png" style="width: 80px; margin-top: -10px" /></span>
                     <span class="light">HackTrain</span>
                 </a>
