added new backgorund

--- a/hackathon-hk-1.html
+++ b/hackathon-hk-1.html
@@ -205,7 +205,7 @@
     </header>
 
     <div style="margin:0 auto; width: 60%;">
-      <div class="videoWrapper" style="background: url(img/hackathon-hk-1/hk1.jpg)">
+      <div class="videoWrapper" style="background: url(img/hackathon-hk-1/hk2.jpg); background-position: center; background-size: cover;">
         
       </div>
     </div>
