--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="/">
-                    <span><img alt="hacktrain" src="img/index/hacktrain-just-logo.png" style="width: 80px; margin-top: -10px" /></span>
+                    <span><img alt="hacktrain" src="img/index/hacktrain-3-just-logo.png" style="width: 80px; margin-top: -10px" /></span>
                     <span class="light">HackTrain</span>
                 </a>
             </div>
@@ -99,7 +99,7 @@
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a class="page-scroll" href="hackathon-3.html">Hackathon</a>
+                        <a class="page-scroll" href="hackathon-uk-3.html">Hackathon</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="http://accelerator.hacktrain.com">Accelerator</a>
@@ -130,7 +130,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <img  alt="the hacktrain" class="light" style="width: 60%; padding:80px 0 80px" src="img/index/hacktrain-logo-white-dates-nov-2015.png"/>
+                        <img  alt="the hacktrain" class="light" style="width: 60%; padding:80px 0 80px" src="img/index/hacktrain-3-logo-plain.png"/>
                     </div>
                 </div>
             </div>
