--- a/hackathon-hk-1.html
+++ b/hackathon-hk-1.html
@@ -484,6 +484,41 @@
         <div style="clear: both; width: 100%;"></div>
     </section>
 
+    <section class="content-section text-center">
+        <div style="width: 90%; margin: auto auto;" class="row">
+            <div class="container col-md-8 col-md-offset-2">
+                <h1>Applications</h1>
+                <hr/>
+
+                <div>
+                    <p>
+                        <h2 style="text-align: center;">
+                        Apply for a place at the <i style="color:#219ab3;font-size:1.5em;">HackTrain HK</i></h2>
+                    </p>
+
+                    <section id="about" class="content-section text-center">
+                        <div class="row">
+
+                            <div class="col-lg-8 col-lg-offset-2">
+                                <p>
+                                    Applications are open! We're looking for the top developers, designers and entrepreneurs from all around the world! Once you submit your application we'll get in touch to go through the application process! Accepted attendees will be invited to a pre-hackathon meetup one month before the HackTrain
+                                </p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <p>
+                        <h2 style="text-align: center;">
+                        Are you ready to <i style="color:#219ab3;font-size:1.5em;">#HackTheRails?</i></h2>
+                    </p>
+
+                </div>
+                
+            </div>
+        </div>
+        <div style="clear: both; width: 100%;"></div>
+    </section>
+
     <div style="clear: both; width: 100%; height: 50px"></div>
 
     <div style="
