--- a/hackathon-hk-1.html
+++ b/hackathon-hk-1.html
@@ -111,6 +111,9 @@
                         <a href="#prizes">Prizes</a>
                     </li>
                     <li>
+                        <a href="#partners">Partners</a>
+                    </li>
+                    <li>
                         <a alt="contact us" href="mailto:hello@hackpartners.com">Contact us</a>
                     </li>
                     <li>
