stop being an idiot mr tam

--- a/hackathon-hk-1.html
+++ b/hackathon-hk-1.html
@@ -496,7 +496,7 @@
         <a id="apply" class="btn btn-default" style="font-size: 50px; text-align: center; margin: auto auto" href="https://hackpartners.typeform.com/to/fjsufF">Apply now</a>
     </div>
 
-    <section class="content-section text-center">
+    <section <section name="partners" id="partners" class="content-section text-center">
         <div style="width: 90%; margin: auto auto;" class="row">
             <div class="container col-md-8 col-md-offset-2">
                 <h1>Partners</h1>
