--- a/hackathon-hk-1.html
+++ b/hackathon-hk-1.html
@@ -95,6 +95,7 @@
                 </a>
             </div>
 
+           <!-- sarah smells like fish. -->
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                 <ul class="nav navbar-nav">
