--- a/hackathon-hk-1.html
+++ b/hackathon-hk-1.html
@@ -446,7 +446,11 @@
 
                     <p>
                         <h2 style="text-align: center;">
-                        Announcing HackTrain HK prizes <i style="color:#219ab3;font-size:1.5em;">soon!</i></h2>
+                        <i style="color:#219ab3;font-size:1.5em;">1st Prize!</i></h2>
+                    </p>
+                    <p>
+                        <h2 style="text-align: center;">
+                        Fully paid trip to London, UK!<i style="color:#219ab3;font-size:1.5em;"></i></h2>
                     </p>
             </div>
         </div>
