--- a/hackathon-hk-1.html
+++ b/hackathon-hk-1.html
@@ -450,7 +450,7 @@
                     </p>
                     <p>
                         <h2 style="text-align: center;">
-                        Fully paid trip to London, UK!<i style="color:#219ab3;font-size:1.5em;"></i></h2>
+                        The winning team will get a fully-paid trip to London, UK!<i style="color:#219ab3;font-size:1.5em;"></i></h2>
                     </p>
             </div>
         </div>
