--- a/hackathon-hk-1.html
+++ b/hackathon-hk-1.html
@@ -513,31 +513,53 @@
                         <i style="color:#219ab3;font-size:1.5em;">Networking Partners</i></h2>
                     </p>
 
-                    <section id="about" class="content-section text-center">
-                        <div class="row">
-                          <div class="container col-xs-12">
-                            <div class="col-xs-3 img-container">
-                              <a href="http://http://www.wynd.hk/">
-                                <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/WYND-logo.png"/>
-                              </a>
-                            </div>
-                            <div class="col-xs-3 img-container">
-                              <a href="http://www.retrospot.hk/">
-                                <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/retrospot_logo.png"/>
-                              </a>
-                            </div>
-                            <div class="col-xs-3 img-container">
-                              <a href="http://papercliphk.com/">
-                                <img style="margin: auto auto" src="img/hackathon-hk-1/paperclip-logo.png"/>
-                              </a>
-                            </div>
-                            <div class="col-xs-3 img-container">
-                              <a href="http://www.misso.com.hk/">
-                                <img style="margin: auto auto" src="img/hackathon-hk-1/missolink-logo.png"/>
-                              </a>
-                            </div>
-                          </div>
+                    <section>
+
+                      <div class="row">
+                        <div class="col-md-3 col-md-12">
+                          <a href="http://http://www.wynd.hk/">
+                            <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/wynd.png"/>
+                          </a>
                         </div>
+                        <div class="col-md-3 col-md-12">
+                          <a href="http://www.retrospot.hk/">
+                            <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/retrospot.png"/>
+                          </a>
+                        </div>
+                        <div class="col-md-3 col-md-12">
+                          <a href="http://papercliphk.com/">
+                            <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/papercliphk.png"/>
+                          </a>
+                        </div>
+                        <div class="col-md-3 col-md-12">
+                          <a href="http://www.misso.com.hk/">
+                            <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/misso.png"/>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div class="row">
+                        <div class="col-md-3 col-md-12">
+                          <a href="http://www.metwork.co.uk/">
+                            <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/metwork.png"/>
+                          </a>
+                        </div>
+                        <div class="col-md-3 col-md-12">
+                          <a href="http://brinc.io/">
+                            <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/brinc.png"/>
+                          </a>
+                        </div>
+                        <div class="col-md-3 col-md-12">
+                          <a href="http://www.startupshk.com/">
+                            <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/startupshk.png"/>
+                          </a>
+                        </div>
+                        <div class="col-md-3 col-md-12">
+                          <a href="http://bitwisehacks.com/">
+                            <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/bitwisehacks.png"/>
+                          </a>
+                        </div>
+                      </div>
                     </section>
 
                 </div>
