--- a/hackathon-hk-1.html
+++ b/hackathon-hk-1.html
@@ -517,7 +517,7 @@
 
                       <div class="row">
                         <div class="col-md-3 col-md-12">
-                          <a href="http://http://www.wynd.hk/">
+                          <a href="http://www.wynd.hk/">
                             <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/wynd.png"/>
                           </a>
                         </div>
