--- a/index.html
+++ b/index.html
@@ -366,19 +366,19 @@
 
                         <div class="col-xs-4 img-container">
                           <a href="https://www.gov.uk/government/organisations/department-for-transport">
-                            <img alt="Department for Transport" style="margin: auto auto" class="img-responsive" src="img/index/dft.png"/>
+                            <img alt="Department for Transport" style="margin: auto auto" class="img-responsive" src="img/sponsors/dft.png"/>
                           </a>
                         </div>
 
                         <div class="col-xs-4 img-container">
                           <a href="https://www.gov.uk/government/organisations/high-speed-two-limited">
-                            <img alt="High speed rail" style="margin: auto auto" class="img-responsive" src="img/sponsors/logo-hs2.png"/>
+                            <img alt="High speed rail" style="margin: auto auto" class="img-responsive" src="img/sponsors/hs2.png"/>
                           </a>
                         </div>
 
                         <div class="col-xs-4 img-container">
                           <a href="https://www.gov.uk/government/organisations/department-for-transport">
-                            <img alt="Smart Rail" style="margin: auto auto" class="img-responsive" src="img/sponsors/logo-bis.png"/>
+                            <img alt="Department for Transport" style="margin: auto auto" class="img-responsive" src="img/sponsors/dft.png"/>
                           </a>
                         </div>
 
@@ -386,19 +386,19 @@
 
                         <div class="col-xs-4 img-container">
                           <a href="#">
-                            <img alt="BAE Systems" style="margin: auto auto" class="img-responsive" src="img/accel-sponsors/bae.png"/>
+                            <img alt="BAE Systems" style="margin: auto auto" class="img-responsive" src="img/sponsors/bae.png"/>
                           </a>
                         </div>
 
                         <div class="col-xs-4 img-container">
                           <a href="#">
-                            <img alt="EY" style="width: 70%; margin: auto auto" class="img-responsive" src="img/accel-sponsors/ey.png"/>
+                            <img alt="EY" style="width: 70%; margin: auto auto" class="img-responsive" src="img/sponsors/ey.png"/>
                           </a>
                         </div>
 
                         <div class="col-xs-4">
                             <a alt="Osborne Clarke" style="width: 100%;" href="#">
-                                <img style="width: 70%;" src="img/accel-sponsors/oc.png"/>
+                                <img style="width: 70%;" src="img/sponsors/oc.png"/>
                             </a>
                         </div>
                         <div style="clear: both; width: 100%; height: 100px;"></div>
@@ -411,7 +411,7 @@
 
                         <div class="col-xs-4 img-container">
                           <a href="http://smartrailworld.com">
-                            <img alt="Smart Rail" style="margin: auto auto" class="img-responsive" src="img/index/smart-rail-world1.png"/>
+                            <img alt="Smart Rail" style="margin: auto auto" class="img-responsive" src="img/sponsors/smartrail.png"/>
                           </a>
                         </div>
 
@@ -440,7 +440,7 @@
 
                 <div class="col-xs-4 img-container">
                   <a href="http://www.firstgroupplc.com/">
-                    <img alt="First group" style="width: 80%;margin: auto auto" class="img-responsive" src="img/sponsors/fg.png"/>
+                    <img alt="First group" style="width: 80%;margin: auto auto" class="img-responsive" src="img/sponsors/first.png"/>
                   </a>
                 </div>
                 <div class="col-xs-4 img-container">
@@ -465,22 +465,22 @@
                 </div>
                 <div alt="SilverRail Technologies" class="col-xs-4 img-container">
                     <a alt="SilverRail Technologies" target="_blank" style="width: 100%;" href="http://silverrailtech.com/">
-                        <img style="width: 100%;" src="img/sponsors/logo-silverrail.png"/>
+                        <img style="width: 100%;" src="img/sponsors/sr.png"/>
                     </a>
                 </div>
                 <div alt="Trailine" class="col-xs-4 img-container">
                     <a alt="Trailine" style="width: 100%;" href="http://trainline.com" target="_blank">
-                        <img style="width: 100%;" src="img/sponsors/logo-trainline.png"/>
+                        <img style="width: 100%;" src="img/sponsors/trainline.png"/>
                     </a>
                 </div>
                 <div alt="ATOC" class="col-xs-4 img-container">
                     <a alt="National Rail Enquiries" target="_blank" style="width: 100%;" href="http://atoc.org">
-                        <img style="width: 80%;" src="img/sponsors/logo-atoc.png"/>
+                        <img style="width: 80%;" src="img/sponsors/atoc.png"/>
                     </a>
                 </div>
                 <div alt="Eversholt" class="col-xs-4 img-container">
                     <a alt="Eversholt" target="_blank" style="width: 100%;" href="http://eversholtrail.co.uk">
-                        <img style="width: 100%;" src="img/sponsors/logo-eversholt.png"/>
+                        <img style="width: 100%;" src="img/sponsors/eversholt.png"/>
                     </a>
                 </div>
                 <div alt="Nomad Digital" class="col-xs-4 img-container">
@@ -490,7 +490,7 @@
                 </div>
                 <div alt="IBM" class="col-xs-3 img-container">
                     <a alt="IBM" target="_blank" style="width: 100%;" href="http://www.ibm.com/">
-                        <img style="width: 100%;" src="img/sponsors/logo-ibm-white.jpg"/>
+                        <img style="width: 100%;" src="img/sponsors/ibm.jpg"/>
                     </a>
                 </div>
                 <div alt="Bloomberg" class="col-xs-4 img-container">
