--- a/hackathon-hk-1.html
+++ b/hackathon-hk-1.html
@@ -510,6 +510,29 @@
                 <div>
                     <p>
                         <h2 style="text-align: center;">
+                        <i style="color:#219ab3;font-size:1.5em;">Venue Sponsors</i></h2>
+                    </p>
+
+                    <section>
+
+                      <div class="row">
+                        <div class="col-md-4 col-md-12">
+                        </div>
+                        <div class="col-md-4 col-md-12">
+                          <a href="http://blueprint.swireproperties.com/">
+                            <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/blueprint.png"/>
+                          </a>
+                        </div>
+                        <div class="col-md-4 col-md-12">
+                        </div>
+                      </div>
+                    </section>
+
+                </div>
+
+                <div>
+                    <p>
+                        <h2 style="text-align: center;">
                         <i style="color:#219ab3;font-size:1.5em;">Networking Partners</i></h2>
                     </p>
 
