--- a/hackathon-hk-1.html
+++ b/hackathon-hk-1.html
@@ -516,14 +516,19 @@
                     <section>
 
                       <div class="row">
-                        <div class="col-md-4 col-md-12">
+                        <div class="col-md-3 col-md-12">
                         </div>
-                        <div class="col-md-4 col-md-12">
+                        <div class="col-md-3 col-md-12">
+                          <a href="http://www.mtr.com.hk/">
+                            <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/mtr.png"/>
+                          </a>
+                        </div>
+                        <div class="col-md-3 col-md-12">
                           <a href="http://blueprint.swireproperties.com/">
                             <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/blueprint.png"/>
                           </a>
                         </div>
-                        <div class="col-md-4 col-md-12">
+                        <div class="col-md-3 col-md-12">
                         </div>
                       </div>
                     </section>
