--- a/hackathon-hk-1.html
+++ b/hackathon-hk-1.html
@@ -510,25 +510,43 @@
                 <div>
                     <p>
                         <h2 style="text-align: center;">
-                        <i style="color:#219ab3;font-size:1.5em;">Venue Sponsors</i></h2>
+                        <i style="color:#219ab3;font-size:1.5em;">Key Sponsor</i></h2>
                     </p>
 
                     <section>
 
                       <div class="row">
-                        <div class="col-md-3 col-md-12">
+                        <div class="col-md-2 col-md-12">
                         </div>
-                        <div class="col-md-3 col-md-12">
+                        <div class="col-md-8 col-md-12">
                           <a href="http://www.mtr.com.hk/">
                             <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/mtr.png"/>
                           </a>
                         </div>
-                        <div class="col-md-3 col-md-12">
+                        <div class="col-md-2 col-md-12">
+                        </div>
+                      </div>
+                    </section>
+
+                </div>
+
+                <div>
+                    <p>
+                        <h2 style="text-align: center;">
+                        <i style="color:#219ab3;font-size:1.5em;">Venue Sponsor</i></h2>
+                    </p>
+
+                    <section>
+
+                      <div class="row">
+                        <div class="col-md-4 col-md-12">
+                        </div>
+                        <div class="col-md-4 col-md-12">
                           <a href="http://blueprint.swireproperties.com/">
                             <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/blueprint.png"/>
                           </a>
                         </div>
-                        <div class="col-md-3 col-md-12">
+                        <div class="col-md-4 col-md-12">
                         </div>
                       </div>
                     </section>
