--- a/hackathon-hk-1.html
+++ b/hackathon-hk-1.html
@@ -91,7 +91,7 @@
                 </button>
                 <a class="navbar-brand page-scroll hidden-sm" href="/">
                     <span><img alt="hacktrain" src="img/index/hacktrain-just-logo.png" style="width: 80px; margin-top: -10px" /></span>
-                    <span class="light">HackTrain</span>
+                    <span class="light">HackTrain</span><br>
                 </a>
             </div>
 
@@ -138,6 +138,14 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <img  alt="the hacktrain" class="light" style="width: 60%; padding:80px 0 80px" src="img/hackathon-hk-1/hacktrain-hk-logo-white.png"/>
+                        <!-- <br><span style="font-size:15px">Powered by</span>
+                        <span><img alt="hacktrain" src="img/hackathon-hk-1/mtr.png" style="width: 80px; margin-top: -10px" /></span>
+                    </div> -->
+                </div>
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <span style="font-size:25px; font-style:italic">Powered By </span>
+                        <span><img alt="hacktrain" src="img/hackathon-hk-1/mtr.png" style="width: 150px; margin-top: -10px; padding-left: 10px;" /></span>
                     </div>
                 </div>
             </div>
@@ -516,14 +524,14 @@
                     <section>
 
                       <div class="row">
-                        <div class="col-md-2 col-md-12">
+                        <div class="col-md-3 col-md-12">
                         </div>
-                        <div class="col-md-8 col-md-12">
+                        <div class="col-md-6 col-md-12">
                           <a href="http://www.mtr.com.hk/">
                             <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/mtr.png"/>
                           </a>
                         </div>
-                        <div class="col-md-2 col-md-12">
+                        <div class="col-md-3 col-md-12">
                         </div>
                       </div>
                     </section>
@@ -539,14 +547,14 @@
                     <section>
 
                       <div class="row">
-                        <div class="col-md-4 col-md-12">
+                        <div class="col-md-3 col-md-12">
                         </div>
-                        <div class="col-md-4 col-md-12">
+                        <div class="col-md-6 col-md-12">
                           <a href="http://blueprint.swireproperties.com/">
                             <img style="margin: auto auto" class="img-responsive" src="img/hackathon-hk-1/blueprint.png"/>
                           </a>
                         </div>
-                        <div class="col-md-4 col-md-12">
+                        <div class="col-md-3 col-md-12">
                         </div>
                       </div>
                     </section>
